--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
-theme: jekyll-theme-modernist
-github:
-  is_project_page: false
+title: All NGOs information in one single page
+description: >-
+  Single page which accumulates all latest information from various Sections 
+  and Articles in one single place.
+url: https://murariamit.github.io/ngo-india
+theme: jekyll-theme-cayman
+kramdown:
+  parse_block_html: true
