--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,5 @@ url: https://murariamit.github.io/ngo-india
 theme: jekyll-theme-cayman
 kramdown:
   parse_block_html: true
+github:
+  is_project_page: false
