--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,6 @@ description: >-
 url: https://murariamit.github.io/ngo-india
 theme: jekyll-theme-cayman
 kramdown:
-  parse_block_html: true
+  parse_block_html: true 
+  github:
+  is_project_page: false
